[gd_scene load_steps=13 format=3 uid="uid://d2obb6l06trj6"]

[ext_resource type="Shader" path="res://scenes/machines/machine_selection.gdshader" id="1_0p54o"]
[ext_resource type="Script" path="res://scenes/machines/components_stand/components_stand.gd" id="1_5vgx3"]
[ext_resource type="Texture2D" uid="uid://bfistge8ptym5" path="res://assets/machines/components_stand.png" id="1_56r8w"]
[ext_resource type="PackedScene" uid="uid://dsgvpxp0f35do" path="res://scenes/machines/interactable_component.tscn" id="3_kgjyo"]
[ext_resource type="PackedScene" uid="uid://b24lajp77bfi6" path="res://scenes/ui/control_menu/control_menu.tscn" id="4_s823s"]
[ext_resource type="FontFile" uid="uid://dk4gdruibe4ps" path="res://assets/ui/zx_palm.ttf" id="6_cvqyy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_srbhi"]
shader = ExtResource("1_0p54o")
shader_parameter/is_enabled = false

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_4rv4g"]
size = Vector2(17, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6q53"]
size = Vector2(17, 7)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4tqko"]
load_path = "res://.godot/imported/ui_icons.png-ba95d9fa9c0eef28aec73f493d978e3b.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_jd8iu"]
atlas = SubResource("CompressedTexture2D_4tqko")
region = Rect2(49, 17, 13, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q85bi"]
size = Vector2(32, 36)

[node name="ComponentsStand" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_5vgx3")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_srbhi")
position = Vector2(0, -7)
texture = ExtResource("1_56r8w")

[node name="shadow" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 0.568627)
y_sort_enabled = true
position = Vector2(0, -16)
texture = SubResource("PlaceholderTexture2D_4rv4g")
offset = Vector2(0, 20)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_d6q53")

[node name="ControlMenu" parent="." instance=ExtResource("4_s823s")]
visible = false
offset_left = -37.0
offset_top = -61.0
offset_right = 46.0
offset_bottom = -21.0

[node name="ComponentsIcon" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -10.0
offset_top = -41.0
offset_right = 4.0
offset_bottom = -25.0

[node name="Icon" type="TextureRect" parent="ComponentsIcon"]
z_index = 1
y_sort_enabled = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_jd8iu")
expand_mode = 4
stretch_mode = 3

[node name="Label" type="Label" parent="ComponentsIcon"]
z_index = 1
y_sort_enabled = true
custom_minimum_size = Vector2(28, 0)
layout_mode = 0
offset_left = -6.0
offset_top = 3.0
offset_right = 22.0
offset_bottom = 19.0
size_flags_horizontal = 0
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("6_cvqyy")
theme_override_font_sizes/font_size = 6
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="InteractableComponent" parent="." instance=ExtResource("3_kgjyo")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableComponent"]
position = Vector2(1, 6)
shape = SubResource("RectangleShape2D_q85bi")
debug_color = Color(0.68641, 0.498511, 0.104982, 0.42)

[connection signal="interactable_activated" from="InteractableComponent" to="." method="_on_interactable_activated"]
[connection signal="interactable_deactivated" from="InteractableComponent" to="." method="_on_interactable_deactivated"]
